--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
         <div class="hire-me">
             <div class="icon-placeholder">📩</div>
-            <span><a href="mailto:your.email@example.com">HIRE ME</a></span>
+            <span><a href="mailto:msprabu12345@gmail.com">HIRE ME</a></span>
         </div>
     </div>
 </header>
@@ -57,8 +57,6 @@
             <h2>🧠 Skills</h2>
             <ul>
                 <li><strong>Languages:</strong> Python, C, Java, JavaScript, SQL</li>
-                <li><strong>Web:</strong> HTML, CSS, React, Tailwind CSS, Framer Motion, Node.js (some)</li>
-                <li><strong>Cloud & DevOps:</strong> Docker, Kubernetes (learning), GitHub Pages, Railway</li>
                 <li><strong>AI/ML/DL:</strong> Machine Learning, Deep Learning, Generative AI</li>
                 <li><strong>Tools:</strong> FastAPI, Streamlit, Blender (basic), YOLOv8, Whisper</li>
                 <li><strong>Cybersecurity:</strong> OX CyberShield (custom-built attack detection)</li>
@@ -110,7 +108,7 @@
         <div class="container">
             <h2>🧾 Certifications & Experience</h2>
             <ul>
-                <li><strong>NCC ‘C’ Certificate:</strong> Leadership, discipline, and soft skills training</li>
+                <li><strong>NCC ‘B’ Certificate:</strong> Leadership, discipline, and soft skills training</li>
                 <li><strong>Internship at Svasti:</strong> Practical experience on real-world projects</li>
                 <li><strong>Symposium Coordinator:</strong> Led tech events in AI & DS department</li>
                 <li><strong>Generative AI Workshops:</strong> Actively learning and applying LLMs on Kaggle and beyond</li>
@@ -122,7 +120,7 @@
         <div class="container">
             <h2>📬 Get In Touch</h2>
             <p>Want to collaborate or discuss a project idea? Feel free to reach out!</p>
-            <a href="mailto:your.email@example.com" class="contact-button">Send Email</a>
+            <a href="mailto:msprabu12345@gmail.com" class="contact-button">Send Email</a>
         </div>
     </section>
 </main>
