--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@ My expertise spans <strong>Machine Learning</strong>, <strong>Generative AI</str
                             Projects <!-- Updated Heading -->
                         </h2>
                         <p class="h1" data-animate-el>
-                            Here are some of the projects I've built, showcasing my skills in AI and Web Development. <!-- Updated Intro Text -->
+                            Here are some of the projects I've built, showcasing my skills in AI, ML, DL, Web Development <!-- Updated Intro Text -->
                         </p>
 
                         <ul class="folio-list row block-lg-one-half block-stack-on-1000">
