--- a/index.html
+++ b/index.html
@@ -778,7 +778,7 @@ My expertise spans <strong>Machine Learning</strong>, <strong>Generative AI</str
         <h5 class="timeline__meta">Symposium Coordinator</h5>
         <p class="timeline__timeframe">5 APR 2024</p>
     </div>
-    <img src="images/Sympo.png" alt="Symposium" class="timeline__image">
+    <img src="Images/Sympo.png" alt="Symposium" class="timeline__image">
     <div class="timeline__desc">
         <p>Served as the <strong>first-ever Symposium Coordinator</strong> for the AI & DS department. Successfully organized and led both technical and non-technical events, showcasing leadership, planning, and teamwork. Played a key role in shaping the department’s identity through this inaugural symposium.</p>
     </div>
@@ -792,7 +792,7 @@ My expertise spans <strong>Machine Learning</strong>, <strong>Generative AI</str
         <h5 class="timeline__meta">Intern – AI, Data Science & SQL Projects</h5>
         <p class="timeline__timeframe">2024 – 2025</p>
     </div>
-    <img src="images/Svasti.png" alt="Svasti Logo" class="timeline__image"> <!-- Replace with actual logo path -->
+    <img src="Images/Svasti.png" alt="Svasti Logo" class="timeline__image"> <!-- Replace with actual logo path -->
     <div class="timeline__desc">
         <p>Worked on real-time AI and Data Science projects involving <strong>machine learning, SQL databases</strong>, and <strong>data visualization</strong>. Gained hands-on experience building intelligent systems and analytics pipelines that solve real-world problems. Contributed to building scalable tools using Python and SQL for internal automation and insights.</p>
     </div>
@@ -806,7 +806,7 @@ My expertise spans <strong>Machine Learning</strong>, <strong>Generative AI</str
         <h5 class="timeline__meta">Intern – AR/VR & Blender</h5>
         <p class="timeline__timeframe">2024</p>
     </div>
-    <img src="images/Pep.png" alt="PEP Software Logo" class="timeline__image"> <!-- Replace with actual logo path -->
+    <img src="Images/Pep.png" alt="PEP Software Logo" class="timeline__image"> <!-- Replace with actual logo path -->
     <div class="timeline__desc">
         <p>Explored <strong>Augmented and Virtual Reality</strong> through hands-on projects using <strong>Blender</strong> for 3D modeling and design. Gained foundational experience in immersive technology development and interactive interfaces that can enhance user experiences across education and simulation platforms.</p>
     </div>
@@ -820,7 +820,7 @@ My expertise spans <strong>Machine Learning</strong>, <strong>Generative AI</str
         <h5 class="timeline__meta">Intern – Python & Data Science</h5>
         <p class="timeline__timeframe">2024</p>
     </div>
-    <img src="images/Codsoft.png" alt="CodSoft Logo" class="timeline__image"> <!-- Replace with actual logo path -->
+    <img src="Images/Codsoft.png" alt="CodSoft Logo" class="timeline__image"> <!-- Replace with actual logo path -->
     <div class="timeline__desc">
         <p>Completed practical projects in <strong>Python programming</strong> and <strong>data science</strong>, including data preprocessing, analysis, and visualization. Strengthened problem-solving skills by applying machine learning techniques to structured data in real-world datasets.</p>
     </div>
@@ -846,7 +846,7 @@ My expertise spans <strong>Machine Learning</strong>, <strong>Generative AI</str
         <h5 class="timeline__meta">‘B’ Certificate – 2 Years</h5>
         <p class="timeline__timeframe">2024 - 2025</p>
     </div>
-    <img src="images/NCC.png" alt="NCC Logo" class="timeline__image">
+    <img src="Images/NCC.png" alt="NCC Logo" class="timeline__image">
     <div class="timeline__desc">
         <p>Completed 2 years of service in the NCC with a <strong>‘B’ Certificate</strong> and successfully participated in a <strong>10-day training camp</strong>. Developed strong leadership, discipline, and teamwork through rigorous physical training and national service activities, fostering unity and essential soft skills.</p>
     </div>
@@ -860,7 +860,7 @@ My expertise spans <strong>Machine Learning</strong>, <strong>Generative AI</str
         <h5 class="timeline__meta">5-Day Camp Participant</h5>
         <p class="timeline__timeframe">5 FEB 2024</p>
     </div>
-    <img src="images/NSS.png" alt="NSS Logo" class="timeline__image">
+    <img src="Images/NSS.png" alt="NSS Logo" class="timeline__image">
     <div class="timeline__desc">
         <p>Actively participated in a <strong>5-day NSS camp</strong> focused on community service, social awareness, and team collaboration. Engaged in rural development activities and environmental initiatives, building civic responsibility and empathy.</p>
     </div>
@@ -874,7 +874,7 @@ My expertise spans <strong>Machine Learning</strong>, <strong>Generative AI</str
         <h5 class="timeline__meta">Software Engineering, Industry 4.0 and IoT</h5>
         <p class="timeline__timeframe">2023 – 2024</p>
     </div>
-    <img src="images/Nptel.png" alt="NPTEL Logo" class="timeline__image">
+    <img src="Images/Nptel.png" alt="NPTEL Logo" class="timeline__image">
     <div class="timeline__desc">
         <p>Completed NPTEL courses on <strong>Software Engineering</strong>, <strong>Industry 4.0</strong> and <strong>Internet of Things (IoT)</strong>. Gained deep insights into modern software practices, automation technologies, and industrial transformation driven by smart devices and connectivity.</p>
     </div>
@@ -888,7 +888,7 @@ My expertise spans <strong>Machine Learning</strong>, <strong>Generative AI</str
         <h5 class="timeline__meta">Sportify App</h5>
         <p class="timeline__timeframe">23 AUG 2024</p>
     </div>
-    <img src="images/SIH.png" alt="Smart India Hackathon Logo" class="timeline__image">
+    <img src="Images/SIH.png" alt="Smart India Hackathon Logo" class="timeline__image">
     <div class="timeline__desc">
         <p><strong>Smart India Hackathon 2024</strong> with the project <strong>“Sportify”</strong> – a smart solution for <strong>enhancing sports opportunities and tracking performance for athletes</strong>. </p>
     </div>
