--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ My expertise spans <strong>Machine Learning</strong>, <strong>Generative AI</str
                                 I'm currently expanding my skills in <strong>Data Science</strong>, <strong>Artificial Intelligence</strong>, and <strong>Backend Development</strong> to deepen my ability to build efficient and scalable intelligent systems. I am focused on enhancing my expertise in <strong>machine learning</strong>, <strong>AI models</strong>, backend technologies, and <strong>SQL</strong> for seamless data integration and management.
                             </p>
                           
-                            <a href="Prabu_MS_CV.pdf" download class="btn btn--medium u-fullwidth" data-animate-el>Download CV</a>
+                            <a href="Images/Prabu_MS_CV.pdf" download class="btn btn--medium u-fullwidth" data-animate-el>Download CV</a>
 
                         </div>
                     </div>
