--- a/index.html
+++ b/index.html
@@ -142,12 +142,11 @@
                             </h2>
                             <!-- Updated About Text -->
                             <p class="attention-getter" data-animate-el>
-                                I'm Prabu M S, an AI & Data Science student with a deep passion for building intelligent, real-world applications. I’ve developed innovative tools like <strong>OMNIX</strong> (an offline voice-controlled AI assistant), <strong>OX CyberShield</strong> (an AI-powered cybersecurity system), and <strong>SkillSync</strong> (a smart learning and collaboration platform).
+                                I'm <strong>Prabu M S</strong>, an aspiring <strong>AI & Data Science engineer</strong> driven by a passion for building intelligent systems that solve real-world problems. I focus on developing <strong>offline-capable AI tools</strong> that prioritize <strong>privacy</strong>, <strong>efficiency</strong>, and <strong>real-time performance</strong>. My journey spans across <strong>machine learning</strong>, <strong>generative AI</strong>, <strong>computer vision</strong>, and <strong>backend development</strong>, where I enjoy creating end-to-end solutions using technologies like <strong>Streamlit</strong>, <strong>SQL</strong>, <strong>YOLOv8</strong>, and <strong>large language models</strong>. With a strong foundation in <strong>Python</strong> , I strive to bridge the gap between intelligent automation and practical usability.
 
-My expertise spans <strong>Machine Learning</strong>, <strong>Generative AI</strong>, <strong>LLMs</strong>, <strong>Computer Vision</strong> (YOLOv8, Face Recognition), and backend development using <strong>FastAPI</strong>, <strong>Streamlit</strong>, and <strong>SQL</strong>. I focus on creating offline-capable AI systems with practical impact.
                             </p>
                             <p data-animate-el>
-                                I'm currently expanding my skills in <strong>Data Science</strong>, <strong>Artificial Intelligence</strong>, and <strong>Backend Development</strong> to deepen my ability to build efficient and scalable intelligent systems. I am focused on enhancing my expertise in <strong>machine learning</strong>, <strong>AI models</strong>, backend technologies, and <strong>SQL</strong> for seamless data integration and management.
+                                I’m currently expanding my knowledge in <strong>scalable backend systems</strong>, <strong>data engineering</strong>, and <strong>model deployment</strong> to further enhance the functionality and impact of <strong>AI-driven applications</strong>.
                             </p>
                           
                             <a href="Images/Prabu_MS_CV.pdf" download class="btn btn--medium u-fullwidth" data-animate-el>Download CV</a>
