--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                                 I’m currently expanding my knowledge in <strong>scalable backend systems</strong>, <strong>data engineering</strong>, and <strong>model deployment</strong> to further enhance the functionality and impact of <strong>AI-driven applications</strong>.
                             </p>
                           
-                            <a href="Images/Prabu_MS_CV.pdf" download class="btn btn--medium u-fullwidth" data-animate-el>Download CV</a>
+                            <a href="Images/PrabuMS_CV.pdf" download class="btn btn--medium u-fullwidth" data-animate-el>Download CV</a>
 
                         </div>
                     </div>
