--- a/index.html
+++ b/index.html
@@ -142,11 +142,11 @@
                             </h2>
                             <!-- Updated About Text -->
                             <p class="attention-getter" data-animate-el>
-                                I'm <strong>Prabu M S</strong>, an aspiring <strong>AI & Data Science engineer</strong> driven by a passion for building intelligent systems that solve real-world problems. I focus on developing <strong>offline-capable AI tools</strong> that prioritize <strong>privacy</strong>, <strong>efficiency</strong>, and <strong>real-time performance</strong>. My journey spans across <strong>machine learning</strong>, <strong>generative AI</strong>, <strong>computer vision</strong>, and <strong>backend development</strong>, where I enjoy creating end-to-end solutions using technologies like <strong>Streamlit</strong>, <strong>SQL</strong>, <strong>YOLOv8</strong>, and <strong>large language models</strong>. With a strong foundation in <strong>Python</strong> . I strive to bridge the gap between intelligent automation and practical usability.
+                                I'm <strong>Prabu M S</strong>, an aspiring <strong>AI & Data Science Engineer</strong> driven by a passion for building intelligent systems that solve real-world problems. I focus on developing <strong>offline-capable AI tools</strong> that prioritize <strong>Privacy</strong>, <strong>Efficiency</strong>, and <strong>Real-Time Performance</strong>. My journey spans across <strong>Machine Learning</strong>, <strong>Generative AI</strong>, <strong>Computer Vision</strong>, and <strong>Backend Development</strong>, where I enjoy creating end-to-end solutions using technologies like <strong>Streamlit</strong>, <strong>SQL</strong>, <strong>YOLOv8</strong>, and <strong>Large Language Models</strong>. With a strong foundation in <strong>Python</strong> . I strive to bridge the gap between intelligent automation and practical usability.
 
                             </p>
                             <p data-animate-el>
-                                I’m currently expanding my knowledge in <strong>scalable backend systems</strong>, <strong>data engineering</strong>, and <strong>model deployment</strong> to further enhance the functionality and impact of <strong>AI-driven applications</strong>.
+                                I’m currently expanding my knowledge in <strong>scalable backend systems</strong>, <strong>Data Engineering</strong>, and <strong>Model Deployment</strong> to further enhance the functionality and impact of <strong>AI-driven applications</strong>.
                             </p>
                           
                             <a href="Images/Prabu_M.pdf" download class="btn btn--medium u-fullwidth" data-animate-el>Download Resume</a>
