--- a/index.html
+++ b/index.html
@@ -184,6 +184,21 @@
             <span class="skill-name">SQL</span>
             <span class="sr-only">SQL</span>
         </div>
+
+     
+        <div class="skill-badge">
+           <i class="fab fa-html5" aria-hidden="true"></i>
+           <span class="skill-name">HTML</span>
+           <span class="sr-only">HTML</span>
+        </div>
+
+
+        <div class="skill-badge">
+           <i class="fab fa-css3-alt" aria-hidden="true"></i>
+           <span class="skill-name">CSS</span>
+           <span class="sr-only">CSS</span>
+        </div>
+
         <div class="skill-badge"> <!-- Changed class, removed title -->
              <i class="fas fa-brain"></i> <!-- Font Awesome -->
              <span class="skill-name">AI/ML/DL</span> <!-- Shortened Text -->
