--- a/index.html
+++ b/index.html
@@ -198,6 +198,13 @@
            <span class="sr-only">CSS</span>
         </div>
 
+        <div class="skill-badge">
+   <i class="fab fa-js-square" aria-hidden="true"></i>
+   <span class="skill-name">JavaScript</span>
+   <span class="sr-only">JavaScript</span>
+</div>
+
+
         <div class="skill-badge"> <!-- Changed class, removed title -->
              <i class="fas fa-brain"></i> <!-- Font Awesome -->
              <span class="skill-name">AI/ML/DL</span> <!-- Shortened Text -->
