--- a/index.html
+++ b/index.html
@@ -788,12 +788,12 @@
     <div class="timeline__bullet"></div>
     <div class="timeline__header">
         <h4 class="timeline__title">National Cadet Corps (NCC)</h4>
-        <h5 class="timeline__meta">‘B’ Certificate – 2 Years</h5>
+        <h5 class="timeline__meta">‘B’ Certificate – 3 Years</h5>
         <p class="timeline__timeframe">2024 - 2025</p>
     </div>
     <img src="Images/NCC.png" alt="NCC Logo" class="timeline__image">
     <div class="timeline__desc">
-        <p>Completed 2 years of service in the NCC with a <strong>‘B’ Certificate</strong> and successfully participated in a <strong>10-day training camp</strong>. Developed strong leadership, discipline, and teamwork through rigorous physical training and national service activities, fostering unity and essential soft skills.</p>
+        <p>Completed 3 years of service in the NCC with a <strong>‘B’ Certificate</strong> and successfully participated in a <strong>two 10-day training camp</strong>. Developed strong leadership, discipline, and teamwork through rigorous physical training and national service activities, fostering unity and essential soft skills.</p>
     </div>
 </div>
 
